<resources>
    <string name="app_name">lab07_sqlite</string>
    <string name="hint_nombre">Nombres</string>
    <string name="hint_apellido">Apellidos</string>
    <string name="hint_telefono">Telefono</string>
    <string name="hint_Dni">DNI</string>
    <string name="hint_correo_electronico">Correo</string>
    <string name="btn_guarda">Registrar</string>
    <string name="menu_nuevo">Nuevo Registro</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="lista">Lista de Usuarios Registrados</string>
    <string name="busqueda">Búsqueda</string>
    <string name="TituloVer">Ver Info Usuario</string>
    <string name="TituloCrear">Crear Usuario</string>
</resources>