<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/teal_200"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:background="@drawable/round_border"
        android:orientation="vertical">

        <TextView
            android:layout_width="350dp"
            android:layout_height="29dp"
            android:text="@string/bienvenido"
            android:textSize="28sp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:textAlignment="center" />

        <ImageView
            android:id="@+id/imageLogo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"
            android:background="@drawable/firstpage"
            tools:ignore="MissingConstraints" />

        <TextView
            android:layout_width="350dp"
            android:layout_height="29dp"
            android:text="@string/busqueda"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textAlignment="center" />

        <SearchView
            android:id="@+id/txtBuscar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="350dp"
            android:layout_height="29dp"
            android:text="@string/lista"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_gravity="center"

            android:textAlignment="center" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listaUsuarios"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_weight=".9" />

        <Button
            android:id="@+id/favNuevo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_rounded_border"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/btn_guarda"
            android:layout_marginBottom="20dp"
            android:textSize="14sp" />
    </LinearLayout>
</ScrollView>