<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/teal_200"
    tools:context="com.idnp.lab08_recyclerview.VerActivity">

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="0dp"
        android:layout_weight=".9"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:background="@drawable/round_border"
        android:orientation="vertical">

        <TextView
            android:id="@+id/viewLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:layout_marginEnd="50dp"
            android:text="@string/TituloVer" />

        <ImageView
            android:id="@+id/imageLogo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:background="@drawable/perfil_person"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/viewNombres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50dp"
            android:textColor="@color/black"
            android:text="Nombres"/>

        <EditText
            android:id="@+id/txtNombres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50dp"
            android:textColor="@color/black"
            android:ems="10"
            android:inputType="textPersonName"
            android:labelFor="@+id/viewNombre"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/viewApellidos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50dp"
            android:textColor="@color/black"
            android:text="Apellidos"/>

        <EditText
            android:id="@+id/txtApellidos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:labelFor="@+id/viewApellidos"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/viewTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50dp"
            android:textColor="@color/black"
            android:text="@string/hint_telefono" />

        <EditText
            android:id="@+id/txtTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50dp"
            android:ems="10"
            android:inputType="phone"
            android:textColor="@color/black"
            android:labelFor="@+id/viewTelefono"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/viewDni"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50dp"
            android:textColor="@color/black"
            android:text="DNI" />

        <EditText
            android:id="@+id/txtDni"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:labelFor="@+id/viewDni"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/viewCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50dp"
            android:textColor="@color/black"
            android:text="@string/hint_correo_electronico" />


        <EditText
            android:id="@+id/txtCorreoElectronico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50dp"
            android:ems="10"
            android:textColor="@color/black"
            android:inputType="textEmailAddress"
            android:labelFor="@+id/viewCorreo"
            android:textSize="18sp" />
        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabEditar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|start"
            android:layout_marginTop="15dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="15dp"
            android:clickable="true"
            android:src="@android:drawable/ic_menu_edit" />

            <Button
                android:id="@+id/btnGuarda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/button_rounded_border"
                android:text="@string/btn_guarda" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabEliminar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:background="@color/red"
                android:clickable="true"
                android:src="@android:drawable/ic_menu_delete" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>